写好了统计

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,13 @@
 xlsxTocsv/佛山班次0线路与百度高德对比情况.xlsx
 
 *.xlsx
+
+0班次公交影响统计/data/samples/sample.log
+
+0班次公交影响统计/data/samples/sample.log.2
+
+0班次公交影响统计/data/samples/sample.log.3
+
+0班次公交影响统计/data/samples/sample.log.4
+
+0班次公交影响统计/output
