--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,5 @@ DoubleW/venv2.7
 DoubleW/venv3.5
 新算法准确率评测/input
 准报站算法辅助率评估/input
+CopyFromFileToFile/matching.log.2016-06-11.sort-100000
+CopyFromFileToFile/matching.log.2016-06-11.sort.cmp-100000
