--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,4 @@ DoubleW/venv3.5
 准报站算法辅助率评估/input
 CopyFromFileToFile/matching.log.2016-06-11.sort-100000
 CopyFromFileToFile/matching.log.2016-06-11.sort.cmp-100000
+SelectGPS/input
