--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,4 @@ DoubleW/venv3.5
 CopyFromFileToFile/matching.log.2016-06-11.sort-100000
 CopyFromFileToFile/matching.log.2016-06-11.sort.cmp-100000
 SelectGPS/input
+SelectGPS/output
