修改好了，就差测试了。

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,4 @@ CopyFromFileToFile/matching.log.2016-06-11.sort-100000
 CopyFromFileToFile/matching.log.2016-06-11.sort.cmp-100000
 SelectGPS/input
 SelectGPS/output
+SelectGPS/temp
