--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ CopyFromFileToFile/matching.log.2016-06-11.sort.cmp-100000
 SelectGPS/input
 SelectGPS/output
 SelectGPS/temp
+PrintRelateBus/input
