--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,5 @@ SelectGPS/input
 SelectGPS/output
 SelectGPS/temp
 PrintRelateBus/input
+CountRecCount/test/system.log.2016-06-09
+CountRecCount/test/system.log.2016-06-13
