--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,9 @@ SelectGPS/temp
 PrintRelateBus/input
 CountRecCount/test/system.log.2016-06-09
 CountRecCount/test/system.log.2016-06-13
+准报站算法辅助率评估/test/82308.csv1
+准报站算法辅助率评估/test/82308.csv2
+准报站算法辅助率评估/test/matching.log.2016-06-16.sort-100000
+准报站算法辅助率评估/test/matching.log.2016-06-16.sort.cmp-100000
+准报站算法辅助率评估/test/matching.log.2016-06-17.sort-400000
+准报站算法辅助率评估/test/matching.log.2016-06-17.sort.cmp-400000
