打印到目录

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,4 @@ CountRecCount/test/system.log.2016-06-13
 准报站算法辅助率评估/test/matching.log.2016-06-16.sort.cmp-100000
 准报站算法辅助率评估/test/matching.log.2016-06-17.sort-400000
 准报站算法辅助率评估/test/matching.log.2016-06-17.sort.cmp-400000
+PrintBusTurnAround/output
