--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,4 @@ CountRecCount/test/system.log.2016-06-13
 准报站算法辅助率评估/test/matching.log.2016-06-17.sort-400000
 准报站算法辅助率评估/test/matching.log.2016-06-17.sort.cmp-400000
 PrintBusTurnAround/output
+PrintBusTurnAround/build
