--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,4 @@ CountRecCount/test/system.log.2016-06-13
 准报站算法辅助率评估/test/matching.log.2016-06-17.sort.cmp-400000
 PrintBusTurnAround/output
 PrintBusTurnAround/build
+准报站算法辅助率评估/build
